<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_total"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:lines="1"
            android:maxLines="2"
            android:text="@string/total"
            android:textSize="20sp"
            android:background="@color/hren"
            android:textColor="@color/black"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/imag_input"
            android:layout_weight="1"
            android:background="@color/hren"
            />

        <TextView
            android:id="@+id/tv_total_num"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_weight="2"
            android:gravity="right"
            android:text="0"
            android:textSize="25sp"
            android:background="@color/hren"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_input_sum"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/vvod_sum"
            android:inputType="numberDecimal"
            android:lines="1"
            android:maxLines="1"
            android:numeric="decimal"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_zarplata"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="@string/zarplata"
            android:text="@string/zarplata"
            android:onClick="addSum"
            android:textSize="15sp"
            />

        <Button
            android:id="@+id/bt_producti"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="@string/produkt"
            android:text="@string/produkt"
            android:textColor="@color/red"
            android:onClick="addSum"
            android:textSize="15sp"
            />

        <Button
            android:id="@+id/bt_veshi"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="@string/veshi"
            android:text="@string/veshi"
            android:textColor="@color/red"
            android:onClick="addSum"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_avans"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="@string/avans"
            android:text="@string/avans"
            android:onClick="addSum"
            android:textSize="15sp" />

        <Button
            android:id="@+id/bt_kredit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="@string/kredit"
            android:text="@string/kredit"
            android:textColor="@color/red"
            android:onClick="addSum"
            android:textSize="15sp" />

        <Button
            android:id="@+id/bt_ipoteka"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="@string/ipoteka"
            android:text="@string/ipoteka"
            android:textColor="@color/red"
            android:onClick="addSum"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_podarok"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="@string/podarok"
            android:text="@string/podarok"
            android:onClick="addSum"
            android:textSize="15sp" />

        <Button
            android:id="@+id/bt_internet"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="@string/internet"
            android:text="@string/internet"
            android:textColor="@color/red"
            android:nestedScrollingEnabled="false"
            android:onClick="addSum"
            android:textSize="15sp" />

        <Button
            android:id="@+id/bt_gkh"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="@string/gkh"
            android:text="@string/gkh"
            android:textColor="@color/red"
            android:onClick="addSum"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_zaim"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="@string/zaim"
            android:text="@string/zaim"
            android:onClick="addSum"
            android:textSize="15sp" />

        <Button
            android:id="@+id/bt_dolg"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="@string/dolg"
            android:text="@string/dolg"
            android:textColor="@color/red"
            android:onClick="addSum"
            android:textSize="15sp" />

        <Button
            android:id="@+id/bt_transport"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="@string/transport"
            android:text="@string/transport"
            android:textColor="@color/red"
            android:onClick="addSum"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_prochee_pl"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="@string/prochee"
            android:text="@string/prochee"
            android:onClick="addSum"
            android:textSize="15sp" />

        <Button
            android:id="@+id/bt_lekarstva"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="@string/lekarstva"
            android:text="@string/lekarstva"
            android:textColor="@color/red"
            android:onClick="addSum"
            android:textSize="15sp" />

        <Button
            android:id="@+id/bt_prochee_mn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tag="@string/prochee_mn"
            android:text="@string/prochee_mn"
            android:textColor="@color/red"
            android:onClick="addSum"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_input_comment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/add_comment"
            android:lines="1"
            android:maxLines="1"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_exit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/exit"
            android:onClick="closeProgram"
            android:textSize="15sp" />

        <Button
            android:id="@+id/bt_podrobnosti"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="viewInfo"
            android:text="@string/podrobnosti"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>